--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "pastebin"
   ],
   "author": {
-    "name": "Raúl Molina",
-    "email": "raul.m@sparkedhost.com",
-    "url": "https://bettd.me/"
+    "name": "Anas Shaikh",
+    "email": "anas@indionichost.com",
+    "url": "https://indionichost.com"
   },
   "main": "haste",
   "dependencies": {
